--- a/code/flask/templates/profile.html
+++ b/code/flask/templates/profile.html
@@ -56,9 +56,17 @@
               </form>
             </div>
             <div id="platform-a" class="tabcontent" style="text-align: left; display: inline-block;">
-              <div class="platform-a-manual">
-                <form action="./youtubeauth" method="POST">
-                  <p>Enter raw header</p>
+              <div class="platform-a-manual", style="text-align: center;">
+                <h2>Connected Account: {{ytName}}</h2>
+                <form action="./ytoauth" method="GET">
+                  <input type="submit" id="login-platform-a" value="Login Using Google">
+                </form>
+                <form action="./ytremove" method="GET">
+                  <input type="submit" id="login-platform-b" value="Remove Account">
+                </form>
+                <form action="./youtubeauth" method="POST"> 
+                  <br>
+                  <p>OR Enter raw header</p>
                   <textarea name="auth_body" cols="40" rows="10" value="{{auth_body}}">{{auth_body}}</textarea>
                   <br>
                   <input type="submit" id="platform-a-submit" value="Update">
@@ -66,7 +74,7 @@
               </div>
             </div>
             <div id="platform-b" class="tabcontent" style="text-align: left; display: inline-block;">
-              <div class="platform-b-auto" style="text-align: center;" >
+              <div class="platform-b-auto" style="text-align: center;">
                 <h2>Connected Account: {{spotifyName}}</h2>
                 <form action="./spotifyauth" method="GET">
                   <input type="submit" id="login-platform-b" value="Login Using Spotify">
